Startup Detail: Stub Startup detail view and template and add URL pattern.
Startup detail attempts to do a case insensitive match with the matched slug URL pattern.
Startup detail page prints the startup name.
Starup detail URL pattern captures the startup slug and passes it to the Startup detail view.
An example pattern: /startup/djagno-software-foundation.

--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -2,7 +2,8 @@
 <ul>
   <!-- list of tags -->
   {% for tag in tag_list %}
-  <li><a href="">{{ tag.name|title }}</a></li>
+    <li><a href="">{{ tag.name|title }}</a></li>
+  {% empty %}<!-- if list is empty -->
+    <p><em>There are currently no Tags available.</em></p>
   {% endfor %}
 </ul>
-      
