--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -12,7 +12,11 @@
 
     <dt>Tag{{ startup.tags.count|pluralize }}</dt>
     {% for tag in startup.tags.all %}
-      <dd><a href="">{{ tag.name|title }}</a></dd>
+    <dd>
+      <a href="{% url 'organizer_tag_detail' tag.slug %}">
+	{{ tag.name|title }}
+      </a>
+    </dd>
     {% endfor %}
   </dl>
   <p>{{ startup.description }}</p>
