--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -1,7 +1,11 @@
 <h2>Startup List</h2>
 <ul>
   {% for startup in startup_list %}
-    <li><a href="{{ startup.url }}">{{ startup.name }}</a></li>
+  <li>
+    <a href="{% url 'organizer_startup_detail' startup.slug %}">
+      {{ startup.name }}
+    </a>
+  </li>
   {% empty %}
     <li><em>No Startups Available</em></li>
   {% endfor %}
