--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -2,7 +2,11 @@
 <ul>
   <!-- list of tags -->
   {% for tag in tag_list %}
-    <li><a href="">{{ tag.name|title }}</a></li>
+  <li>
+    <a href="{% url 'organizer_tag_detail' tag.slug  %}">
+      {{ tag.name|title }}
+    </a>
+  </li>
   {% empty %}<!-- if list is empty -->
     <p><em>There are currently no Tags available.</em></p>
   {% endfor %}
