--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -1,14 +1,18 @@
+<!-- display a single Tag object and list all of the startups and blog --
+  -- posts associated with the Tag
+  -->
+
 <!-- name of tag -->
 <h2>{{ tag.name|title }}</h2>
 
 {% if tag.startup_set.all %}
 <section>
   <h3>Startup{{ tag.startup_set.count|pluralize }}</h3>
-  <!-- list of startups related to tag -->
+  <!-- list of startups related to the tag -->
   <p>Tag is associated with
     <em>
-    {{ tag.startup_set.count }}
-    startup{{ tag.startup_set.count|pluralize }}.
+      {{ tag.startup_set.count }}
+      startup{{ tag.startup_set.count|pluralize }}.
     </em>
   </p>
   <ul>
@@ -27,21 +31,22 @@
 <section>
   <section>
     <h3>Blog Post{{ tag.blog_posts.count|pluralize }}</h3>
-    <!-- list of posts related to tag -->
+    <!-- list of posts related to the tag -->
     <p>Tag is associated with
       <em>
-      {{ tag.blog_posts.count }}
-      blog post{{ tag.blog_posts.count|pluralize }}.
+	{{ tag.blog_posts.count }}
+	blog post{{ tag.blog_posts.count|pluralize }}.
       </em>
-    <ul>
-      {% for post in tag.blog_posts.all %}
-      <li><a href="">{{ post.title|title }}</a></li>
-      {% endfor %}
-    </ul>
+      <ul>
+	{% for post in tag.blog_posts.all %}
+	<li><a href="">{{ post.title|title }}</a></li>
+	{% endfor %}
+      </ul>
   </section>
 </section>
 {% endif %}
 
+<!-- if neither lists print any content -->
 {% if not tag.startup_set.all and not tag.blog_posts.all %}
 <p>This tag is not related to any content.</p>
 {% endif %}
