--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -1,3 +1,10 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+
+{% block title %}
+{{ block.super }} - {{ startup.name|title }}
+{% endblock %}
+
+{% block content %}
 <article>
   <h2>{{ startup.name }}</h2>
   <dl>
@@ -41,3 +48,4 @@
   </section>
   {% endif %}
 </article>
+{% endblock %}
