--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -1,3 +1,10 @@
+{% extends parent_template|default:"organizer/base_organizer.html" %}
+
+{% block title %}
+{{ block.super }} - Startups
+{% endblock %}
+
+{% block content %}
 <h2>Startup List</h2>
 <ul>
   {% for startup in startup_list %}
@@ -10,3 +17,4 @@
     <li><em>No Startups Available</em></li>
   {% endfor %}
 </ul>
+{% endblock %}
