--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
       </header>
       <nav>
 	<ul>
-	  <li><a href="/blog/">Blog</a></li>
-	  <li><a href="/startup/">Startups</a></li>
-	  <li><a href="/tag/">Tags</a></li>
+	  <li><a href="{% url 'blog_post_list' %}">Blog</a></li>
+	  <li><a href="{% url 'organizer_startup_list' %}">Startups</a></li>
+	  <li><a href="{% url 'organizer_tag_list' %}">Tags</a></li>
 	</ul>
       </nav>
       <main>
