post list: Link post list to post detail with URL tag.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@ Blog - Posts
 <article>
   <header>
   <h2>
-    <a href="">
+    <a href="{% url 'blog_post_detail' post.pub_date.year post.pub_date.month post.slug %}">
       {{ post.title|title }}
     </a>
   </h2>
