--- a/organizer/templates/organizer/tag_list.html
+++ b/organizer/templates/organizer/tag_list.html
@@ -10,7 +10,7 @@
   <!-- list of tags -->
   {% for tag in tag_list %}
   <li>
-    <a href="{% url 'organizer_tag_detail' tag.slug  %}">
+    <a href="{{ tag.get_absolute_url }}">
       {{ tag.name|title }}
     </a>
   </li>
