--- a/organizer/templates/organizer/startup_list.html
+++ b/organizer/templates/organizer/startup_list.html
@@ -9,7 +9,7 @@
 <ul>
   {% for startup in startup_list %}
   <li>
-    <a href="{% url 'organizer_startup_detail' startup.slug %}">
+    <a href="{{ startup.get_absolute_url }}">
       {{ startup.name }}
     </a>
   </li>
