detail templates: Invoke get_absolute_url on associated models to link detail pages.

--- a/organizer/templates/organizer/tag_detail.html
+++ b/organizer/templates/organizer/tag_detail.html
@@ -32,7 +32,7 @@
   <ul>
     {% for startup in tag.startup_set.all %}
     <li>
-      <a href="{% url 'organizer_startup_detail' startup.slug %}">
+      <a href="{{ startup.get_absolute_url }}">
 	{{ startup.name }}
       </a>
     </li>
@@ -53,7 +53,7 @@
       </em>
       <ul>
 	{% for post in tag.blog_posts.all %}
-	<li><a href="">{{ post.title|title }}</a></li>
+	<li><a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a></li>
 	{% endfor %}
       </ul>
   </section>
