--- a/organizer/templates/organizer/startup_detail.html
+++ b/organizer/templates/organizer/startup_detail.html
@@ -20,7 +20,7 @@
     <dt>Tag{{ startup.tags.count|pluralize }}</dt>
     {% for tag in startup.tags.all %}
     <dd>
-      <a href="{% url 'organizer_tag_detail' tag.slug %}">
+      <a href="{{ tag.get_absolute_url }}">
 	{{ tag.name|title }}
       </a>
     </dd>
@@ -42,7 +42,7 @@
   <section>
     <h3>Blog Post{{ startup.blog_posts.all|pluralize }}</h3> <ul>
       {% for post in startup.blog_posts.all %} <li>
-	<a href="">{{ post.title|title }}</a></li>
+	<a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a></li>
       {% endfor %}
     </ul>
   </section>
