base: Add extra info to describe template context.

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       </nav>
       <main>
 	{% block content %}
-        This is default content!
+        This is default content! (found in templates/base.html)
 	{% endblock %}
       </main>
     </div><!-- container -->
