tag_form template: Display form errors.

--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -7,13 +7,43 @@
 {% block content %}
 <form action="{% url 'organizer_tag_create' %}" method="post">
   {% csrf_token %}
+
+  {% if form.non_field_errors %}
+  <ul class="custom_error_list">
+    {% for error in form.non_field_errors %}
+    <li><em>{{ error }}</em></li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+  
+  {% if form.name.errors %}
+  <ul class="custom_error_list">
+    {% for error in form.name.errors %}
+    <li><em>{{ error }}</em></li>
+    {% endfor %}
+  </ul>
+  {% endif %}
   <p>
     <label for="id_name">Name:</label>
+    {% if form.name.value %}
+    <input id="id_name" maxlength="31" name="name" type="text"
+	   value="{{ form.name.value }}" />
+    {% else %}
     <input id="id_name" maxlength="31" name="name" type="text" />
+    {% endif %}
   </p>
+
+  {% if form.slug.errors %}
+  <ul class="custom_error_list">
+    {% for error in form.slug.errors %}
+    <li><em>{{ error }}</em></li>
+    {% endfor %}
+  </ul>
+  {% endif %}
   <p>
     <label for="id_slug">Slug:</label>
-    <input id="id_slug" maxlength="31" name="slug" type="text" />
+    <input id="id_slug" maxlength="31" name="slug" type="text"
+	   value="{{ form.slug.value }}" />
     <br />
     <span class="helptext">(A label for URL config)</span>
   </p>
