--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -8,21 +8,9 @@
 <form action="{% url 'organizer_tag_create' %}" method="post">
   {% csrf_token %}
 
-  {% if form.non_field_errors %}
-  <ul class="custom_error_list">
-    {% for error in form.non_field_errors %}
-    <li><em>{{ error }}</em></li>
-    {% endfor %}
-  </ul>
-  {% endif %}
+  {{ form.non_field_errors }}
   
-  {% if form.name.errors %}
-  <ul class="custom_error_list">
-    {% for error in form.name.errors %}
-    <li><em>{{ error }}</em></li>
-    {% endfor %}
-  </ul>
-  {% endif %}
+  {{ form.name.errors }}
   <p>
     <label for="id_name">Name:</label>
     {% if form.name.value %}
@@ -33,17 +21,15 @@
     {% endif %}
   </p>
 
-  {% if form.slug.errors %}
-  <ul class="custom_error_list">
-    {% for error in form.slug.errors %}
-    <li><em>{{ error }}</em></li>
-    {% endfor %}
-  </ul>
-  {% endif %}
+  {{ form.slug.errors }}
   <p>
     <label for="id_slug">Slug:</label>
+    {% if form.slug.value %}
     <input id="id_slug" maxlength="31" name="slug" type="text"
 	   value="{{ form.slug.value }}" />
+    {% else %}
+    <input id="id_slug" maxlength="31" name="slug" type="text" />
+    {% endif %}
     <br />
     <span class="helptext">(A label for URL config)</span>
   </p>
