tag_form template: Refactor input fields to use Django field tags.

--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -13,27 +13,19 @@
   {{ form.name.errors }}
   <p>
     <label for="id_name">Name:</label>
-    {% if form.name.value %}
-    <input id="id_name" maxlength="31" name="name" type="text"
-	   value="{{ form.name.value }}" />
-    {% else %}
-    <input id="id_name" maxlength="31" name="name" type="text" />
-    {% endif %}
+    {{ form.name }}
   </p>
 
   {{ form.slug.errors }}
   <p>
     <label for="id_slug">Slug:</label>
-    {% if form.slug.value %}
-    <input id="id_slug" maxlength="31" name="slug" type="text"
-	   value="{{ form.slug.value }}" />
-    {% else %}
-    <input id="id_slug" maxlength="31" name="slug" type="text" />
-    {% endif %}
+    {{ form.slug }}
     <br />
     <span class="helptext">(A label for URL config)</span>
   </p>
+
   <button type="submit">Create Tag</button>
+
 </form>
 {% endblock %}
     
