tag_form template: Refactor help text.

--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -7,7 +7,6 @@
 {% block content %}
 <form action="{% url 'organizer_tag_create' %}" method="post">
   {% csrf_token %}
-
   {{ form.non_field_errors }}
   
   {{ form.name.errors }}
@@ -21,11 +20,10 @@
     <label for="id_slug">Slug:</label>
     {{ form.slug }}
     <br />
-    <span class="helptext">(A label for URL config)</span>
+    <span class="helptext">{{ form.slug.help_text }}</span>
   </p>
 
   <button type="submit">Create Tag</button>
-
 </form>
 {% endblock %}
     
