--- a/organizer/templates/organizer/tag_form.html
+++ b/organizer/templates/organizer/tag_form.html
@@ -9,24 +9,16 @@
   {% csrf_token %}
   {{ form.non_field_errors }}
   
-  {{ form.name.errors }}
+  {% for field in form %}
+  {{ field.errors }}
   <p>
-    <label for="{{ form.name.id_for_label }}">
-      {{ form.name.label}}:
-    </label>
-    {{ form.name }}
+    {{ field.label_tag }}
+    {{ field }}
+    {% if field.help_text %}
+    <span class="helptext">{{ field.help_text }}</span>
+    {% endif %}
   </p>
-
-  {{ form.slug.errors }}
-  <p>
-    <label for="{{ form.slug.id_for_label }}">
-      {{ form.slug.label }}:
-    </label>
-    {{ form.slug }}
-    <br />
-    <span class="helptext">{{ form.slug.help_text }}</span>
-  </p>
-
+  {% endfor %}
   <button type="submit">Create Tag</button>
 </form>
 {% endblock %}
